--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "drizzle-auth-adaptor-pg",
   "version": "0.0.1",
   "dependencies": {
-    "drizzle-orm": "^0.25.4"
+    "drizzle-orm": "^0.25.4",
+    "uuid": "^9.0.0"
   }
 }
